<resources>
    <string name="app_name">Test Series</string>

    <string name="running_now">Running Now</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="my_running_exam">My Running Exam</string>
    <string name="my_coming_exam">My Coming Exam</string>

    <string name="by">By:</string>
    <string name="author_name">Author Name</string>
    <string name="total_marks">Total Marks:</string>
    <string name="max_mark_s">Max Marks: </string>
    <string name="info">Info</string>
    <string name="save_rs">Save Rs</string>
    <string name="rs">Rs</string>

    <string name="action_settings">Settings</string>
    <string name="buy_now">Buy Now</string>
    <string name="ruppes">Rs 200000</string>
    <string name="for_one_year">For 1 Year</string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="releasing_date">Releasing Date:</string>
    <string name="date">15-07-2017</string>
    <string name="total_dues">Total Ques:</string>
    <string name="number">500</string>
    <string name="passing_marks">Passing Marks</string>
    <string name="max_marks">Max Marks:</string>
    <string name="start_on">Start On:</string>
    <string name="ends_on">Ends On:</string>
    <string name="result">Result:</string>
    <string name="instruction">Instructions:</string>

    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No.</string>
    <string name="address">Address</string>
    <string name="continues">Continue</string>

    <string name="question">Title</string>
    <string name="login_as">Login As</string>
    <string name="student">Student</string>
    <string name="faculty">Faculty</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="cnf_password">Confirm Password</string>

    <string name="create_exam">Create Exam</string>
    <string name="exam_name">Exam Name</string>
    <string name="total_question">Total Questions</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="section">Section</string>
    <string name="start_date_exam">Start Date</string>
    <string name="end_date_exam">End Date</string>
    <string name="selling_price">Selling Price(Rs)</string>
    <string name="offer_price">Offer Price(Rs)</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="exam_details">Exam Details</string>
    <string name="exam_time_min">Exam Time(Minutes)</string>
    <string name="exam_time">Exam Time</string>
    <string name="max_mark">Max Mark</string>
    <string name="passing_mark">Passing Mark</string>
    <string name="result_date">Result Date</string>
    <string name="description">Description</string>
    <string name="short_description">Short Description</string>
    <string name="note">Note</string>
    <string name="instruction_set">Instruction Set</string>
    <string name="previous">Previous</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="ok">OK</string>
    <string name="add_questions">Add Questions</string>
    <string name="add">Add</string>
    <string name="action">Action</string>
    <string name="submitted_date">Submitted Date</string>
    <string name="end_date_card">End Date </string>

    <string name="upload">Upload</string>

    <string name="dummy">Dummy Dummy</string>
    <string name="dashboard">Dashboard</string>

    <string name="total_student">Total Student</string>
    <string name="submitted_student">Submitted Student</string>
    <string name="student_name">Student Name</string>
    <string name="student_list">Student List</string>

    <string name="filter_by">Filter By</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="sort">Sort</string>
    <string name="stream">Stream</string>

    <string name="price_low_to_high">Price - Low to High</string>
    <string name="price_high_to_low">Price - High to Low</string>

    <string name="my_profile">My Profile</string>
    <string name="my_exams">My Exams</string>
    <string name="my_submitted_exam">Submitted Exam</string>
    <string name="start_exam">Start Exam</string>
    <string name="running">Running</string>
    <string name="coming">Coming</string>
    <string name="notifications">Notifications</string>
    <string name="hello_guest">Hello Guest</string>
    <string name="question_paper">Question Paper</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="question_">Question</string>
    <string name="sub_question">Sub Question</string>

    <string name="que_no">Que No.</string>
    <string name="completed">Completed</string>
    <string name="answer_sheet_uploaded">Answer Sheet Uploaded</string>


    <!--Api related strings-->
    <string name="to_use_this_login_first">To use this please Login</string>
    <string name="internet_failed">Please check your internet connection</string>
    <string name="please_add_user_name">User Name field should not be empty</string>
    <string name="please_add_password">Password field should not be empty</string>
    <string name="user_name_and_password_does_not_match">UserName or Password does not match</string>
    <string name="first_name_not_be_empty">First Name not be Empty</string>
    <string name="last_name_not_be_empty">Last Name not be Empty</string>
    <string name="mobile_no_not_be_empty">Mobile Number not be Empty</string>
    <string name="email_not_be_empty">Email not be Empty</string>
    <string name="address_not_be_empty">Address not be Empty</string>
    <string name="password_not_be_empty">Password not be Empty</string>
    <string name="cnf_password_not_be_empty">Confirm Password not be Empty</string>
    <string name="password_and_cnf_does_not_match">Password and Confirm Password Does Not Match</string>


    <string name="text_dummy_large">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="text_dummy_small">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>

    <string-array name="select">
        <item>Select</item>
        <item>Pune-01</item>
        <item>Pune-02</item>
        <item>Pune-03</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
