<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_exam_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_h4"
                    android:text="@string/exam_name"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_weight="1.6"
                        android:layout_gravity="center">

                        <TextView
                            android:id="@+id/txt_by"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_h1"
                            android:text="@string/by"
                            android:textColor="@color/colorBlack"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/txt_author_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_h2"
                            android:text="@string/author_name"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_course_name"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_weight="0.4"
                        android:background="@drawable/grey_button"
                        android:text="CA"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_size_h1"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/txt_total_marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_h2"
                    android:text="@string/total_marks"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="0dp"/>

                <TextView
                    android:id="@+id/txt_max_marks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_h2"
                    android:text="@string/max_mark_s"
                    android:textColor="@color/colorBlack"
                    android:layout_marginTop="0dp"/>

                <TextView
                    android:id="@+id/txt_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_h2"
                    android:text="@string/info"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="-10dp"
                    android:layout_gravity="right"/>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/colorFaintBlack"
                android:layout_marginTop="0dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_weight="1.3">

                    <TextView
                        android:id="@+id/txt_releasing_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_h3"
                        android:text="@string/releasing_date"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="0dp"/>

                    <TextView
                        android:id="@+id/txt_start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_h2"
                        android:text="@string/start_date"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="0dp"/>

                    <TextView
                        android:id="@+id/txt_end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_h2"
                        android:text="@string/end_date"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="0dp"/>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/card_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardElevation="5dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="0dp"
                    app:cardCornerRadius="5dp"
                    android:layout_weight="0.7"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_save_rs"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_h2"
                            android:text="@string/save_rs"
                            android:textColor="@color/colorWhite"
                            android:padding="8dp"
                            android:background="@color/colorButton"
                            android:layout_gravity="center"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/txt_rs_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_h2"
                            android:text="@string/ruppes"
                            android:textColor="@color/colorFaintBlack"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/txt_rs_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_h2"
                            android:text="@string/ruppes"
                            android:textColor="@color/colorBlack"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"/>

                        <TextView
                            android:id="@+id/txt_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_size_h2"
                            android:text="@string/for_one_year"
                            android:textColor="@color/colorFaintBlack"
                            android:layout_marginTop="5dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="5dp"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <Button
                android:id="@+id/btn_start_exam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButton"
                android:layout_margin="20dp"
                android:text="@string/start_exam"
                android:textColor="@color/colorWhite"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_h3"
                android:visibility="gone"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>