<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_job_card_cell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardElevation="3dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exam_name"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_exam_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h3"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@color/colorTextDate"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/result_date"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_h2"/>

                    <TextView
                        android:id="@+id/txt_releasing_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h3"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_marginRight="@dimen/margin_large"
                    android:layout_weight="1"
                    android:background="@color/colorTextDate"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="1px"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:layout_weight="1"
                    android:background="@color/colorTextDate"
                    android:layerType="software" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_student"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_h2" />

                    <TextView
                        android:id="@+id/txt_total_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/margin_medium"
                    android:background="@color/colorTextDate"
                    android:layerType="software" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/submitted_student"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_h2"/>

                    <TextView
                        android:id="@+id/txt_submitted_student"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/number"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/text_size_h3"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>